[package]
name = "externalhack_assaultcube1202"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = {version="0.3.9",features=["winuser","processthreadsapi","errhandlingapi","psapi","handleapi","memoryapi"]}